// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render Game component wrapped by Layout if game has been started 1`] = `
<div>
  <div
    data-testid="layout"
  >
    <div
      data-testid="game"
    />
  </div>
</div>
`;

exports[`App should render Welcome component wrapped by Layout if game is not started 1`] = `
<div>
  <div
    data-testid="layout"
  >
    <div
      data-testid="welcome"
    />
  </div>
</div>
`;
